--- a/templates/web/about_us.html
+++ b/templates/web/about_us.html
@@ -16,7 +16,7 @@
         <div class="container clearfix">
             <div class="logo">
 				<a href="">
-					<img src="./img/logo.png" alt="logo">
+					<img src="{% static 'img/logo.png' %}" alt="logo">
 				</a>
 			</div>
 			<div class="top-right clearfix">
